<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mayur.swiggyui.swiggyui.ui.home.HomeFragment"
        android:label="@string/swiggy"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.mayur.swiggyui.swiggyui.ui.food.FoodFragment"
        android:label="@string/food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_instamart"
        android:name="com.mayur.swiggyui.swiggyui.ui.instamart.InstamartFragment"
        android:label="@string/instamart"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.mayur.swiggyui.swiggyui.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.mayur.swiggyui.swiggyui.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>