<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/area"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:lines="1"
                android:text="@string/temp_address"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/text_offers"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_title" />

            <TextView
                android:id="@+id/text_offers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/offers"
                android:textAlignment="center"
                android:textSize="20sp"
                android:drawableStart="@drawable/offer"
                android:drawablePadding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/banner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"

                app:layout_constraintEnd_toEndOf="@+id/text_offers"
                app:layout_constraintStart_toStartOf="@+id/text_address"
                app:layout_constraintTop_toBottomOf="@+id/text_address">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFF4F4"
                    android:paddingEnd="16dp"
                    android:text="@string/get_unlimited_benefits_75_month_on_restaurant_instamart"
                    android:textAlignment="center"
                    android:textColor="#990000"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_title"
                    tools:ignore="RtlSymmetry" />

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/banner"
                app:layout_constraintStart_toStartOf="@+id/banner"
                app:layout_constraintTop_toBottomOf="@+id/banner" />


            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                app:iss_auto_cycle="true"
                app:iss_delay="500"
                app:iss_error_image="@drawable/error"
                app:iss_period="1500"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_text_align="CENTER"
                app:iss_title_background="@drawable/gradient"
                app:iss_unselected_dot="@drawable/default_unselected_dot"
                app:layout_constraintEnd_toEndOf="@+id/recyclerView1"
                app:layout_constraintStart_toStartOf="@+id/recyclerView1"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHz2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/banner"
                app:layout_constraintStart_toStartOf="@+id/banner"
                app:layout_constraintTop_toBottomOf="@+id/image_slider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewVz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/banner"
                app:layout_constraintStart_toStartOf="@+id/banner"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHz2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>